fix: correct CSS alignment for prose content

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -167,5 +167,14 @@
   }
   math {
     @apply font-math;
+
+    /* Note: may need more fixes from https://github.com/ronkok/Temml/blob/main/site/assets/Temml-STIX2.css */
+    .tml-right {
+      @apply text-right;
+    }
+
+    .tml-left {
+      @apply text-left;
+    }
   }
 }
